8.2.6 (03-04-2022)
- Improvement: Add reimbursement state in reimbursements report
- Improvement: Add more fields to treasury exemption reports

8.2.5 (31-01-2022)
- Bug Fix: Add missing exception labels
- Bug Fix: Throw correct exception, to translate the message in presentation
- Bug Fix: Export observations and termsAndConditions for reimbursements also. Fix reimbursement report headers.

8.2.4 (10-01-2022)
- Improvement: Export observations and termsAndConditions fields of settlement note

8.2.3 (06-01-2022)
- Bug Fix: In close debts academic debt generation rules, check if degree curricular plan, active in registration in the execution year, is in the list of DCPs associated with the rule  

8.2.2 (15-12-2021)
- Bug Fix: Fix person fiscal number validation, in person customer creation

8.2.1 (12-12-2021)
- Improvement: Add academic treasury event type
- Bug Fix: Check of AcademicTariff.maximumAmount is not negative

8.2.0 (25-11-2021)
- Improvement: Throw exception when create a person customer to a person already with person customer
- New Fixture: Reservation taxes, which can discount amount from tuition debts
- Improvement: Allow set interest type in AcademicTreasuryTargetCreateDebtBuilder
- Bug Fix: Get execution year name from treasury event target
- Refactor: Predicates in TreasuryEvent to check if it is related with tuition debts, and if the event discount on tuition total amount

8.1.1 (17-11-2021)
- Refactor: Handler for settlement note payment, equal to declared in AcademicTreasuryBridgeImpl

8.1.0 (27-10-2021)
- Improvement: Add method to find academic custom debt AcademicTreasuryEvent 
- Improvement: Change API of academic debt builder to receive the required DateTime when parameter
- Bug Fix: Refer to extracurricular tuition group when creating infered tuition for extra curricular course, instead of standalone tuition group

8.0.5 (01-10-2021)
- Bug Fix: Align headers in debit and credit entries in debts report

8.0.4 (29-09-2021)